--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Tron Lint",
-  "id": "",
+  "id": "tronlintId",
   "api": "1.0.0",
   "main": "dist/code.js",
   "ui": "dist/ui.html",
